--- a/AcademicInfo/AcademicInfoClient/src/app/app.component.html
+++ b/AcademicInfo/AcademicInfoClient/src/app/app.component.html
@@ -1,9 +1,18 @@
-﻿<h1 id="tableLabel">Weather forecast</h1>
+﻿<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body> 
+    <!-- Write your comments here 
+<h1 id="tableLabel">Weather forecast</h1>
 
 <p>This component demonstrates fetching data from the server.</p>
 
 <p *ngIf="!forecasts"><em>Loading... Please refresh once the ASP.NET backend has started. See <a href="https://aka.ms/jspsintegrationangular">https://aka.ms/jspsintegrationangular</a> for more details.</em></p>
-
 <table *ngIf="forecasts">
     <thead>
         <tr>
@@ -22,3 +31,7 @@
         </tr>
     </tbody>
 </table>
+-->
+<router-outlet></router-outlet>
+</body>
+</html>
