Revert "Squashed commit of the following:"
This reverts commit 6c1b972929e39bb29e12a75a58988580d2f19080.

--- a/AcademicInfo/AcademicInfoClient/src/app/student-profile/student-profile.component.html
+++ b/AcademicInfo/AcademicInfoClient/src/app/student-profile/student-profile.component.html
@@ -1,32 +1,1 @@
-<!--<p>student-profile works!</p>-->
-<div fxLayoutAlign="center center" fxFlexFill>
-  <mat-card fxFlex="25" fxLayout="row">
-    <svg xmlns="http://www.w3.org/2000/svg" width="200" height="200" fill="currentColor" class="bi bi-person-workspace" viewBox="0 0 16 16">
-      <path d="M4 16s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H4Zm4-5.95a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5Z"/>
-      <path d="M2 1a2 2 0 0 0-2 2v9.5A1.5 1.5 0 0 0 1.5 14h.653a5.373 5.373 0 0 1 1.066-2H1V3a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v9h-2.219c.554.654.89 1.373 1.066 2h.653a1.5 1.5 0 0 0 1.5-1.5V3a2 2 0 0 0-2-2H2Z"/>
-    </svg>
-    <form style="margin-left: 5%;" class="example-form" fxLayoutAlign="stretch" fxLayout="column"
-          [formGroup]="addStudentForm"  (ngSubmit)="addStudent()">
-      <mat-toolbar color="transparent">AcademicInfo</mat-toolbar>
-      <mat-form-field>
-        <input matInput placeholder="userId" [formControl]="$any(addStudentForm).controls['userId']">
-      </mat-form-field>
-      <mat-form-field>
-        <input matInput placeholder="department" [formControl]="$any(addStudentForm).controls['department']">
-      </mat-form-field>
-      <mat-form-field>
-        <input matInput placeholder="name" [formControl]="$any(addStudentForm).controls['name']">
-      </mat-form-field>
-      <mat-form-field>
-        <input matInput placeholder="year" [formControl]="$any(addStudentForm).controls['year']">
-      </mat-form-field>
-      <mat-form-field>
-        <input matInput placeholder="group" [formControl]="$any(addStudentForm).controls['group']">
-      </mat-form-field>
-      <mat-form-field>
-        <input matInput type="password" placeholder="password" [formControl]="$any(addStudentForm).controls['password']">
-      </mat-form-field>
-      <button mat-raised-button type="submit">Add</button>
-    </form>
-  </mat-card>
-</div>
+<p>student-profile works!</p>
