--- a/AcademicInfo/AcademicInfoClient/src/app/login-form/login-form.component.html
+++ b/AcademicInfo/AcademicInfoClient/src/app/login-form/login-form.component.html
@@ -12,7 +12,7 @@
         <mat-form-field>
             <input matInput type="password" placeholder="password">
           </mat-form-field>
-        <button mat-raised-button type="submit" onclick="submit()">Login</button>
+        <button mat-raised-button (click)="login_click()">Login</button>
       </form>
 </mat-card>
 </div>
