--- a/AcademicInfo/AcademicInfoClient/src/app/staff-profile/manage-students/manage-students.component.html
+++ b/AcademicInfo/AcademicInfoClient/src/app/staff-profile/manage-students/manage-students.component.html
@@ -1,6 +1,6 @@
 <div fxFlexFill fxLayoutAlign="center center" fxLayout="column">
     <mat-card style="width: 58%; height: fit-content;">
-        <button mat-raised-button style="float:right">Add student</button>
+        <button mat-raised-button style="float:right" (click)="load_student_form()">Add student</button>
     </mat-card>
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
     <ng-container matColumnDef="position">
