--- a/AcademicInfo/AcademicInfoClient/src/app/staff-profile/manage-students/student-form/student-form.component.html
+++ b/AcademicInfo/AcademicInfoClient/src/app/staff-profile/manage-students/student-form/student-form.component.html
@@ -1,17 +1,18 @@
 <div fxLayoutAlign="center center" fxFlexFill>
     <mat-card fxFlex="25" fxLayout="row">
-        <form style="margin-left: 5%;" class="example-form" fxLayoutAlign="stretch" fxLayout="column" fxFlexFill>
+        <form style="margin-left: 5%;" class="example-form" fxLayoutAlign="stretch" fxLayout="column" fxFlexFill
+        [formGroup]="studentForm" (ngSubmit)="addStudent()">
             <mat-form-field>
-              <input matInput placeholder="First Name">
+              <input matInput placeholder="Name" [formControl]="$any(studentForm).controls['Name']">
             </mat-form-field>
             <mat-form-field>
-                <input matInput placeholder="Last Name">
+                <input matInput placeholder="Department" [formControl]="$any(studentForm).controls['Department']">
               </mat-form-field>
               <mat-form-field>
-                <input matInput placeholder="Group">
+                <input matInput placeholder="Year" [formControl]="$any(studentForm).controls['Year']">
               </mat-form-field>
               <mat-form-field>
-                <input matInput placeholder="Year">
+                <input matInput placeholder="Group" [formControl]="$any(studentForm).controls['Group']">
               </mat-form-field>
             <button mat-raised-button type="submit" onclick="submit()">Add student</button>
           </form>
