--- a/AcademicInfo/AcademicInfoClient/src/app/student-profile/student-profile.component.html
+++ b/AcademicInfo/AcademicInfoClient/src/app/student-profile/student-profile.component.html
@@ -1,4 +1,5 @@
-<!--<p>student-profile works!</p>-->
+<p>student-profile works!</p>
+<!--
 <div fxLayoutAlign="center center" fxFlexFill>
   <mat-card fxFlex="25" fxLayout="row">
     <svg xmlns="http://www.w3.org/2000/svg" width="200" height="200" fill="currentColor" class="bi bi-person-workspace" viewBox="0 0 16 16">
@@ -30,3 +31,4 @@
     </form>
   </mat-card>
 </div>
+-->
