--- a/AcademicInfo/AcademicInfoClient/src/app/student-profile/student-profile.component.html
+++ b/AcademicInfo/AcademicInfoClient/src/app/student-profile/student-profile.component.html
@@ -1,4 +1,10 @@
-<p>student-profile works!</p>
+<mat-card class="side-bar" fxLayout="column">
+  <mat-card-title>{{name}}</mat-card-title>
+  <mat-card-title>{{department}}</mat-card-title>
+  <mat-card-title>{{year}}</mat-card-title>
+  <mat-card-title>{{group}}</mat-card-title>
+  <button mat-raised-button style="margin-top: 80%" (click)="logout()">Logout</button>
+</mat-card>
 <!--
 <div fxLayoutAlign="center center" fxFlexFill>
   <mat-card fxFlex="25" fxLayout="row">
