--- a/AcademicInfo/AcademicInfoClient/src/app/student-profile/student-profile.component.css
+++ b/AcademicInfo/AcademicInfoClient/src/app/student-profile/student-profile.component.css
@@ -2,12 +2,27 @@
   position: absolute;
   height: 100%;
   width: 20%;
-  background: rgba(0, 0, 0, 0.49);
+  background: rgba(0, 0, 0, 0.47);
   text-align: center;
   font-size: 20px;
   align-content: center;
   padding-top: 10%;
   color:white;
+}
+.tabs{
+  position:absolute;
+  width:80%;
+  height: 100%;
+  left:20%;
+}
+.tab{
+  height:100%;
+  width:100%;
+  background: rgba(31, 89, 99);
+}
+
+.mat-tab-header{
+  background-color: #424242;
 }
 .mat-card-title{
   padding: 20px;
