--- a/AcademicInfo/AcademicInfoClient/src/app/student-profile/student-profile.component.html
+++ b/AcademicInfo/AcademicInfoClient/src/app/student-profile/student-profile.component.html
@@ -5,6 +5,13 @@
   <mat-card-title>{{group}}</mat-card-title>
   <button mat-raised-button style="margin-top: 80%" (click)="logout()">Logout</button>
 </mat-card>
+<mat-tab-group class="tabs">
+  <mat-tab label="Courses">
+    <app-courses-tab></app-courses-tab>
+  </mat-tab>
+  <mat-tab label="Optionals"><app-optionals-tab></app-optionals-tab></mat-tab>
+</mat-tab-group>
+
 <!--
 <div fxLayoutAlign="center center" fxFlexFill>
   <mat-card fxFlex="25" fxLayout="row">
