--- a/AcademicInfo/AcademicInfoClient/src/app/teacher-profile/teacher-profile.component.html
+++ b/AcademicInfo/AcademicInfoClient/src/app/teacher-profile/teacher-profile.component.html
@@ -1,12 +1,15 @@
 <mat-card fxLayout="column">
 
   <svg version="1.1" id="Layer_1_1_" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-       viewBox="0 0 16 16" style="align-self: center;height:80px;width:80px">
-   <polygon points="0,5 8,9 15,5.5 15,14 16,14 16,5 8,1 "/>
+       viewBox="0 0 16 16" style="align-self: center;height:100px;width:100px;">
+    <polygon points="0,5 8,9 15,5.5 15,14 16,14 16,5 8,1 "/>
     <polygon points="3,7.059 3,11.5 8,14 13,11.5 13,7.059 8,9.559 "/>
-   </svg>
+  </svg>
+
+
   <mat-card-title fxLayoutAlign="center">Hello,</mat-card-title>
   <mat-card-title fxLayoutAlign="center">{{name}}</mat-card-title>
+
   <br>
   <br>
   <br>
@@ -36,20 +39,32 @@
       </svg>
       MenuOption
     </button>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
     <button mat-button>
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-app" viewBox="0 0 16 16">
+        <path d="M11 2a3 3 0 0 1 3 3v6a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3V5a3 3 0 0 1 3-3h6zM5 1a4 4 0 0 0-4 4v6a4 4 0 0 0 4 4h6a4 4 0 0 0 4-4V5a4 4 0 0 0-4-4H5z"/>
+      </svg>
+      MenuOption
+    </button>
+    <button mat-button>
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-app" viewBox="0 0 16 16">
+        <path d="M11 2a3 3 0 0 1 3 3v6a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3V5a3 3 0 0 1 3-3h6zM5 1a4 4 0 0 0-4 4v6a4 4 0 0 0 4 4h6a4 4 0 0 0 4-4V5a4 4 0 0 0-4-4H5z"/>
+      </svg>
+      MenuOption
+    </button>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <button mat-button (click)="logout()">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-circle" viewBox="0 0 16 16">
         <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
         <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
