--- a/AcademicInfo/AcademicInfoClient/src/app/staff-profile/staff-profile.component.css
+++ b/AcademicInfo/AcademicInfoClient/src/app/staff-profile/staff-profile.component.css
@@ -1,24 +1,35 @@
-.example-container {
-    width: 300px;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.44);
-    position:absolute;
-    top:0%;
-    left:0%
-  }
-  
-  .example-sidenav-content {
-    display: flex;
-    height: 100%;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .example-sidenav {
-    padding: 20px;
-    background-color: rgba(0, 0, 0, 0.611);
-  }
+.sidenav{
+  position:fixed;
+  height:100%;
+  width: 20%;
+}
+mat-card-title{
+  font-size: 15px;
+}
 
-  .menu-button{
-    position:absolute;
-  }
+.manage-students{
+  align-items: center;
+  position:absolute;
+  display: flex;
+}
+.Component{
+  display:flex;
+  margin-left:20%;
+  height:100%;
+  width:80%;
+  align-content: center;
+  align-items:center;
+  justify-content: center;
+}
+.table{
+  margin-left: 20%;
+  width:80%;
+}
+.form{
+  position:relative;
+  width:50%;
+}
+
+
+
+
