--- a/AcademicInfo/AcademicInfoClient/src/app/student-profile/courses-tab/courses-tab.component.html
+++ b/AcademicInfo/AcademicInfoClient/src/app/student-profile/courses-tab/courses-tab.component.html
@@ -1,20 +1,20 @@
 <div fxFlexAlign="center center" style="margin-top: 50px">
 <table fxFlexFill mat-table [dataSource]="courses" class="mat-elevation-z8 demo-table">
-    <ng-container *ngFor="let column of columns" [matColumnDef]="column.columnDef">
+    <ng-container *ngFor="let column of columns" [matColumnDef]="column.columnDef"
+
+    >
       <th mat-header-cell *matHeaderCellDef>
         {{column.header}}
       </th>
-      <td mat-cell *matCellDef="let row">
+      <td mat-cell *matCellDef="let row"
+          (click)="sendCellData(column.cell(row))">
         {{column.cell(row)}}
       </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"
-        onclick="function sendCellData(data) {
-          console.log(data)
-        }
-        sendCellData(row)"></tr>
+        ></tr>
 </table>
 </div>
 
