alerts for add student

--- a/AcademicInfo/AcademicInfoClient/src/app/staff-profile/manage-students/student-form/student-form.component.html
+++ b/AcademicInfo/AcademicInfoClient/src/app/staff-profile/manage-students/student-form/student-form.component.html
@@ -8,9 +8,14 @@
             <mat-form-field>
                 <input matInput placeholder="Department" [formControl]="$any(studentForm).controls['Department']">
               </mat-form-field>
-              <mat-form-field>
-                <input matInput placeholder="Year" [formControl]="$any(studentForm).controls['Year']">
-              </mat-form-field>
+              <mat-form-field appearance="fill">
+               <mat-label>Year</mat-label>
+                <mat-select matInput required [formControl]="$any(studentForm).controls['Year']">
+                   <mat-option value=1>1</mat-option>
+                  <mat-option value=2>2</mat-option>
+                  <mat-option value=3>3</mat-option>
+                </mat-select>
+          </mat-form-field>
               <mat-form-field>
                 <input matInput placeholder="Group" [formControl]="$any(studentForm).controls['Group']">
               </mat-form-field>
