--- a/AcademicInfo/AcademicInfoClient/src/app/student-profile/student-profile.component.css
+++ b/AcademicInfo/AcademicInfoClient/src/app/student-profile/student-profile.component.css
@@ -33,3 +33,22 @@ mat-raised-button{
 .label{
   padding: 20px;
 }
+
+.Component{
+  display:flex;
+  margin-left:20%;
+  height:100%;
+  width:80%;
+  align-content: center;
+  align-items:center;
+  justify-content: center;
+}
+.table{
+  position:relative;
+  width:50%;
+}
+.form{
+  position:relative;
+  width:50%;
+}
+
