update teacher profile info

--- a/AcademicInfo/AcademicInfoClient/src/app/student-profile/student-profile.component.html
+++ b/AcademicInfo/AcademicInfoClient/src/app/student-profile/student-profile.component.html
@@ -82,5 +82,5 @@
   <div *ngIf="hello == 1" style="text-align:center; font-size:30px; color:white">Welcome!</div>
   <app-courses-tab *ngIf="coursesTab == 1" class="table"></app-courses-tab>
   <app-optionals-tab *ngIf="optionalTab == 1" class="table"></app-optionals-tab>
-  <app-update-profile *ngIf="updatePfinfo == 1 && ready==1"></app-update-profile>
+  <app-update-profile *ngIf="updatePfinfo == 1"></app-update-profile>
 </div>
