--- a/AcademicInfo/AcademicInfoClient/src/app/teacher-profile/teacher-profile.component.html
+++ b/AcademicInfo/AcademicInfoClient/src/app/teacher-profile/teacher-profile.component.html
@@ -45,11 +45,11 @@
       </svg>
       MenuOption
     </button>
-    <button mat-button>
-      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-app" viewBox="0 0 16 16">
-        <path d="M11 2a3 3 0 0 1 3 3v6a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3V5a3 3 0 0 1 3-3h6zM5 1a4 4 0 0 0-4 4v6a4 4 0 0 0 4 4h6a4 4 0 0 0 4-4V5a4 4 0 0 0-4-4H5z"/>
+    <button mat-button (click)="updateProfileInfo()">
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
+        <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z"/>
       </svg>
-      MenuOption
+      Update profile info
     </button>
     <br>
     <br>
@@ -75,7 +75,8 @@
 </mat-card>
 <div class="Component">
   <div *ngIf="hello == 1" style="text-align:center; font-size:30px; color:white">Welcome!</div>
-<app-optionals-form *ngIf="propose == 1"></app-optionals-form>
+  <app-optionals-form *ngIf="propose == 1"></app-optionals-form>
+  <app-update-teacher *ngIf="updatePfinfo == 1"></app-update-teacher>
 </div>
 
 
