--- a/AcademicInfo/AcademicInfoClient/src/app/teacher-profile/teacher-profile.component.html
+++ b/AcademicInfo/AcademicInfoClient/src/app/teacher-profile/teacher-profile.component.html
@@ -35,11 +35,11 @@
       </svg>
       Grade students
     </button>
-    <button mat-button>
+    <button mat-button *ngIf="chief==1" (click)="loadOptionalProposals()">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-app" viewBox="0 0 16 16">
         <path d="M11 2a3 3 0 0 1 3 3v6a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3V5a3 3 0 0 1 3-3h6zM5 1a4 4 0 0 0-4 4v6a4 4 0 0 0 4 4h6a4 4 0 0 0 4-4V5a4 4 0 0 0-4-4H5z"/>
       </svg>
-      MenuOption
+      See optional proposals
     </button>
     <button mat-button>
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-app" viewBox="0 0 16 16">
@@ -80,6 +80,7 @@
   <app-optionals-form *ngIf="propose == 1"></app-optionals-form>
   <app-update-teacher *ngIf="updatePfinfo == 1"></app-update-teacher>
   <app-grade-student *ngIf="gradeStudent==1"></app-grade-student>
+  <app-optional-proposals *ngIf="seeOptionalProposals==1"></app-optional-proposals>
 </div>
 
 
