--- a/AcademicInfo/AcademicInfoClient/src/app/staff-profile/manage-students/manage-students.component.css
+++ b/AcademicInfo/AcademicInfoClient/src/app/staff-profile/manage-students/manage-students.component.css
@@ -1,3 +1,15 @@
 table{
   width:80%;
 }
+
+::ng-deep .mat-focused .mat-form-field-label {
+  color: white !important;
+}
+
+::ng-deep.mat-form-field-underline {
+  background-color: white !important;
+}
+
+::ng-deep.mat-form-field-ripple {
+  background-color: white !important;;
+}
