--- a/AcademicInfo/AcademicInfoClient/src/app/staff-profile/manage-students/manage-students.component.html
+++ b/AcademicInfo/AcademicInfoClient/src/app/staff-profile/manage-students/manage-students.component.html
@@ -1,4 +1,18 @@
- <table mat-table [dataSource]="students" class="mat-elevation-z8">
+
+<mat-form-field style="color: white">
+  <input style="color: white" matInput placeholder="Group" [(ngModel)]="groupFilter" (keyup)="applyFilters()">
+</mat-form-field>
+<mat-form-field style="color: white">
+  <input style="color: white" matInput placeholder="Year" [(ngModel)]="yearFilter" (keyup)="applyFilters()">
+</mat-form-field>
+<mat-form-field style="color: white">
+  <input style="color: white" matInput placeholder="Average Min" [(ngModel)]="averageMinFilter" (keyup)="applyFilters()">
+</mat-form-field>
+<mat-form-field style="color: white">
+  <input style="color: white" matInput placeholder="Average Max" [(ngModel)]="averageMaxFilter" (keyup)="applyFilters()">
+</mat-form-field>
+
+<table mat-table [dataSource]="tableStudents" class="mat-elevation-z8">
 
   <ng-container matColumnDef="position">
     <th mat-header-cell *matHeaderCellDef> ID </th>
@@ -11,7 +25,7 @@
   </ng-container>
 
   <ng-container matColumnDef="department">
-    <th mat-header-cell *matHeaderCellDef> year </th>
+    <th mat-header-cell *matHeaderCellDef> Department </th>
     <td mat-cell *matCellDef="let element"> {{element.department}} </td>
   </ng-container>
 
